--- a/index.html
+++ b/index.html
@@ -12,3 +12,15 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+<style>
+html{
+  height: 100%;
+}
+body {
+  margin: 0;
+  height:100%;
+}
+#app{
+  height:100%;
+}
+</style>
